# Zaitun

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
compiler/bootstrap/: Cargo.toml  main.rs
compiler/bootstrap/src/: docgen.rs  driver.rs  error.rs  error_handling.rs  ffi.rs  lexer.rs  lsp.rs  macro.rs  macro_system.rs  optimize.rs  package.rs  parser.rs  pattern.rs  pattern_check.rs  pm.rs  profile.rs  safety.rs  typecheck.rs  types.rs
compiler/bootstrap/tests/: lexer_tests.rs
docs/: language-spec.md
runtime/src/: gc.rs
specs/: zaitun.toml
src/: main.rs
std/src/: collections.rs  concurrency.rs  crypto.rs  csv.rs  ffi.rs  fs.rs  io.rs  json.rs  path.rs  simd.rs  string.rs  thread.rs  xml.rs
std/src/collections/: vector.rs
std/src/io/: file.rs
std/src/net/: tcp.rs
std/src/os/: mod.rs
std/src/platform/: mod.rs
std/src/sync/: atomic.rs  channel.rs
tools/bench/src/: benchmark.rs
tools/docgen/src/: generator.rs
tools/lsp/src/: server.rs
tools/package/src/: manager.rs
tools/repl/src/: repl.rs
tools/test/src/: framework.rs
